trunk/Archive2/30/f794015ec9536e/output
main.cpp:69:72: error: 'model::Vector2D model::Vector2D::operator*(const model::Vector2D&, float)' must take either zero or one argument
     Vector2D Vector2D::operator*( const Vector2D& lhs, const float rhs )
                                                                        ^
